# Copyright 2024 tison <wander4096@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = [
  "cmd/morax",
  "crates/broker",
  "crates/meta",
  "crates/runtime",
  "crates/server",
  "crates/storage",
  "crates/telemetry",
  "crates/version",
  "sdk/api",
  "sdk/client",
  "tests/behavior",
  "tests/toolkit",
  "xtask",
]

resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tisonkun/morax/"
version = "0.0.1"

[workspace.dependencies]
backon = { version = "1.5.0", features = ["tokio-sleep"] }
base64 = { version = "0.22" }
better-panic = { version = "0.3" }
build-data = { version = "0.2" }
clap = { version = "4.5", features = ["derive"] }
const_format = { version = "0.2" }
ctrlc = { version = "3.4" }
error-stack = { version = "0.5" }
fastimer = { version = "0.9.0", features = ["logging"] }
futures = { version = "0.3.31" }
gix-discover = { version = "0.39.0" }
insta = { version = "1.40", features = ["json"] }
jiff = { version = "0.2.9", features = ["serde"] }
local-ip-address = { version = "0.6" }
log = { version = "0.4", features = ["kv_unstable_serde", "serde"] }
logforth = { version = "0.24.0" }
mea = { version = "0.3.4" }
mime = { version = "0.3" }
opendal = { version = "0.53.1" }
pin-project = { version = "1.1" }
poem = { version = "3.1", features = ["compression", "rustls"] }
regex = { version = "1.11" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
scopeguard = { version = "1.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
shadow-rs = { version = "1.1.1", default-features = false }
sqlx = { version = "0.8", features = [
  "json",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
] }
tempfile = { version = "3.13" }
test-harness = { version = "0.3" }
testcontainers = { version = "0.23", features = ["blocking"] }
thiserror = { version = "2.0" }
tokio = { version = "1.41", features = ["full"] }
toml = { version = "0.8" }
url = { version = "2.5" }
uuid = { version = "1.11", features = ["v4"] }
which = { version = "7.0" }

# workspace dependencies
morax-api = { version = "0.0.1", path = "sdk/api" }
morax-broker = { version = "0.0.1", path = "crates/broker" }
morax-client = { version = "0.0.1", path = "sdk/client" }
morax-meta = { version = "0.0.1", path = "crates/meta" }
morax-runtime = { version = "0.0.1", path = "crates/runtime" }
morax-server = { version = "0.0.1", path = "crates/server" }
morax-storage = { version = "0.0.1", path = "crates/storage" }
morax-telemetry = { version = "0.0.1", path = "crates/telemetry" }
morax-version = { version = "0.0.1", path = "crates/version" }
tests-toolkit = { version = "0.0.1", path = "tests/toolkit" }

[workspace.lints.rust]
unknown_lints = "deny"
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
field_reassign_with_default = "allow"
manual_range_contains = "allow"
new_without_default = "allow"

[profile.release]
debug = true
lto = "thin"

[profile.dist]
codegen-units = 1
debug = true
inherits = "release"
lto = "fat"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
