# Copyright 2024 tison <wander4096@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "kafka-api"
version = "0.4.1"

description = "Manual implementation of Apache Kafka API in Rust."
documentation = "https://docs.rs/kafka-api"
homepage = "https://github.com/tisonkun/morax/tree/main/api/kafka-api"
publish = true
readme = "README.md"
repository = "https://github.com/tisonkun/morax/"

edition.workspace = true
license.workspace = true

[dependencies]
byteorder = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
