# Copyright 2024 tison <wander4096@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "morax"
publish = true

description = "A message queue and data streaming platform based on cloud native services."

authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
doc = false
name = "morax"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
ctrlc = { workspace = true }
error-stack = { workspace = true }
log = { workspace = true }
morax-protos = { workspace = true }
morax-runtime = { workspace = true }
morax-server = { workspace = true }
morax-telemetry = { workspace = true }
morax-version = { workspace = true }
opendal = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
