# Copyright 2024 tison <wander4096@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "morax-version"
publish = false

edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.release]
release = false

[dependencies]
const_format = { workspace = true }
serde = { workspace = true }
shadow-rs = { workspace = true }

[build-dependencies]
build-data = { workspace = true }
gix-discover = { workspace = true }
shadow-rs = { workspace = true, features = ["build"] }

[lints]
workspace = true
